Fix security dashboard timestamps